# kinesis-lattice

./: .replit  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  vercel.json
.agents/: agent_assets_metadata.toml
.agents/memory/: MEMORY.md  kinesis-runtime.md
.migration-backup/: .env.example  Dockerfile  README.md
.migration-backup/agent-runtime/: package.json
.migration-backup/agent-runtime/public/: index.html
.migration-backup/agent-runtime/src/: index.ts
.migration-backup/agent-runtime/t3n-sdk-mock/: index.d.ts  index.js  package.json
.migration-backup/contracts/src/: lib.rs
.migration-backup/contracts/wit/: kinesis-lattice.wit
.migration-backup/docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  SUBMISSION.md
.migration-backup/scripts/demo/: run-demo.js
.migration-backup/sdk/: package.json
agent-runtime/: jest.config.js  package.json
agent-runtime/public/: index.html
agent-runtime/src/: index.ts  test-t3n-live.ts
agent-runtime/t3n-sdk-mock/: index.js
artifacts/api-server/: package.json
artifacts/kinesis/: index.html  package.json
artifacts/kinesis-mobile/: app.json  package.json
attached_assets/: Pasted--Home-BUIDLs-Hackathons-PRIZE-POOL-2-000-USD-EVENT-TIME_1782139536014.txt
contracts/: Cargo.toml
dashboard/: next.config.js  package.json  tailwind.config.js
dashboard/src/app/: page.tsx  (+1 more)
docs/: ERC8004.md  SUBMISSION.md  T3N_GAPS.md
scripts/deploy/: deploy-tee-contracts.js
scripts/setup/: setup-agent-identity.js
sdk/src/: coherence.ts  t3n-bridge.ts  types.ts
tests/integration/: jest.config.js  package.json
(+65 files in other folders)
